tests/NormalTests/paczka1/fuzzy1/56145987.err
Error in line 2: S531 A4 3,8
Error in line 7: 1ApG4O S799 21,2
Error in line 9: 1ApG4O S531 7,8
Error in line 11: yjk5JU A4 39,3
Error in line 17: yjk5JU S531 3,1
Error in line 22: 1ApG4O A4 24,3
Error in line 25: 1ApG4O S799 35,8
